--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
       </div>
     </main>
 
-    <section class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Tiago Pereira</a>.
-    </section>
+    </footer>
   </body>
 </html>
