--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Tiago Pereira</a>.
+      >. Coded by
+      <a href="https://social-links-buildandbreak.netlify.app/">Tiago Pereira</a
+      >.
     </footer>
   </body>
 </html>
